Fixed card images not showing full image

--- a/NSSGolf/static/CSS/main.css
+++ b/NSSGolf/static/CSS/main.css
@@ -118,6 +118,8 @@ img {
 }
 
 .card-img-top {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
